--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -19,10 +19,3 @@ nav {
     width: 100%;
     display: flex;
 }
-
-@media (max-width: 480px) {
-    #titleContainer {
-        margin-top: -72px;
-        margin-bottom: -12px;
-    }
-}
